[package]
name = "ag-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures-util = { version = "0.3.31" }
clap = { version = "4.5.31", features = ["derive"] }
termion = "4.0.4"
rustyline = "15.0.0"